--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@ export DEB_BUILD_MAINT_OPTIONS=hardening=+all
 
 COHERENT_DMA_ARCHS = amd64 arm64 i386 ia64 powerpc powerpcspe ppc64 ppc64el s390x sparc64 x32
 
-dh_params = --with python3,systemd --builddirectory=build-deb
+dh_params = --with python3 --builddirectory=build-deb
 
 %:
 	dh $@ $(dh_params)
